# clarifai-cpp-grpc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml  publish.yml  run-tests.yml
example_usage/: CMakeLists.txt  main.cpp
google/api/: annotations.pb.cc  http.pb.cc  http.pb.h
proto/clarifai/api/: resources.grpc.pb.cc  resources.grpc.pb.h  resources.pb.cc  resources.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
proto/clarifai/api/status/: status.grpc.pb.cc  status.grpc.pb.h  status.pb.cc  status.pb.h  status_code.grpc.pb.cc  status_code.grpc.pb.h  status_code.pb.cc  status_code.pb.h
proto/clarifai/api/utils/: extensions.grpc.pb.cc  extensions.grpc.pb.h  extensions.pb.cc  extensions.pb.h  matrix.grpc.pb.cc  matrix.grpc.pb.h  matrix.pb.cc  matrix.pb.h  test_proto.grpc.pb.cc  test_proto.grpc.pb.h  test_proto.pb.cc  test_proto.pb.h
proto/clarifai/auth/scope/: scope.grpc.pb.cc  scope.grpc.pb.h  scope.pb.cc  scope.pb.h
proto/clarifai/auth/types/: types.grpc.pb.cc  types.grpc.pb.h  types.pb.cc  types.pb.h
proto/clarifai/auth/util/: extension.grpc.pb.cc  extension.grpc.pb.h  extension.pb.cc  extension.pb.h
tests/: Base.hh  integration_tests.cc
